fixed typos in max pool figure and size of tensors after convolutional filters (#35)

--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -202,7 +202,7 @@
     "        conved_1 = F.relu(self.conv_1(embedded).squeeze(3))\n",
     "        conved_2 = F.relu(self.conv_2(embedded).squeeze(3))\n",
     "            \n",
-    "        #conv_n = [batch size, n_filters, sent len - filter_sizes[n]]\n",
+    "        #conved_n = [batch size, n_filters, sent len - filter_sizes[n] + 1]\n",
     "        \n",
     "        pooled_0 = F.max_pool1d(conved_0, conved_0.shape[2]).squeeze(2)\n",
     "        pooled_1 = F.max_pool1d(conved_1, conved_1.shape[2]).squeeze(2)\n",
@@ -240,6 +240,8 @@
     "        \n",
     "        super().__init__()\n",
     "        \n",
+    "        print(filter_sizes)\n",
+    "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
     "        \n",
     "        self.convs = nn.ModuleList([\n",
@@ -271,8 +273,8 @@
     "        \n",
     "        conved = [F.relu(conv(embedded)).squeeze(3) for conv in self.convs]\n",
     "            \n",
-    "        #conv_n = [batch size, n_filters, sent len - filter_sizes[n]]\n",
-    "        \n",
+    "        #conved_n = [batch size, n_filters, sent len - filter_sizes[n] + 1]\n",
+    "                \n",
     "        pooled = [F.max_pool1d(conv, conv.shape[2]).squeeze(2) for conv in conved]\n",
     "        \n",
     "        #pooled_n = [batch size, n_filters]\n",
@@ -336,7 +338,7 @@
     "        \n",
     "        conved = [F.relu(conv(embedded)) for conv in self.convs]\n",
     "            \n",
-    "        #conv_n = [batch size, n_filters, sent len - filter_sizes[n] - 1]\n",
+    "        #conved_n = [batch size, n_filters, sent len - filter_sizes[n] + 1]\n",
     "        \n",
     "        pooled = [F.max_pool1d(conv, conv.shape[2]).squeeze(2) for conv in conved]\n",
     "        \n",
@@ -373,7 +375,7 @@
     "PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\n",
     "\n",
     "\n",
-    "model = CNN(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT, PAD_IDX)"
+    "model = CNN1d(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT, PAD_IDX)"
    ]
   },
   {
@@ -634,21 +636,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.644 | Train Acc: 62.23%\n",
-      "\t Val. Loss: 0.487 |  Val. Acc: 78.46%\n",
-      "Epoch: 02 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.419 | Train Acc: 80.98%\n",
-      "\t Val. Loss: 0.360 |  Val. Acc: 84.72%\n",
-      "Epoch: 03 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.302 | Train Acc: 87.17%\n",
-      "\t Val. Loss: 0.345 |  Val. Acc: 85.25%\n",
-      "Epoch: 04 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.218 | Train Acc: 91.27%\n",
-      "\t Val. Loss: 0.318 |  Val. Acc: 87.04%\n",
-      "Epoch: 05 | Epoch Time: 0m 12s\n",
-      "\tTrain Loss: 0.155 | Train Acc: 94.35%\n",
-      "\t Val. Loss: 0.339 |  Val. Acc: 86.56%\n"
+      "Epoch: 01 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.656 | Train Acc: 60.82%\n",
+      "\t Val. Loss: 0.521 |  Val. Acc: 77.40%\n",
+      "Epoch: 02 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.432 | Train Acc: 80.00%\n",
+      "\t Val. Loss: 0.369 |  Val. Acc: 84.44%\n",
+      "Epoch: 03 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.307 | Train Acc: 86.99%\n",
+      "\t Val. Loss: 0.344 |  Val. Acc: 85.22%\n",
+      "Epoch: 04 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.224 | Train Acc: 91.09%\n",
+      "\t Val. Loss: 0.321 |  Val. Acc: 86.77%\n",
+      "Epoch: 05 | Epoch Time: 0m 7s\n",
+      "\tTrain Loss: 0.157 | Train Acc: 94.17%\n",
+      "\t Val. Loss: 0.331 |  Val. Acc: 87.02%\n"
      ]
     }
    ],
@@ -693,7 +695,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.339 | Test Acc: 85.28%\n"
+      "Test Loss: 0.345 | Test Acc: 85.06%\n"
      ]
     }
    ],
@@ -752,7 +754,7 @@
     {
      "data": {
       "text/plain": [
-       "0.1023554727435112"
+       "0.15394726395606995"
       ]
      },
      "execution_count": 19,
@@ -779,7 +781,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9818674325942993"
+       "0.9749677777290344"
       ]
      },
      "execution_count": 20,
