--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -239,9 +239,7 @@
     "                 dropout, pad_idx):\n",
     "        \n",
     "        super().__init__()\n",
-    "        \n",
-    "        print(filter_sizes)\n",
-    "        \n",
+    "                \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
     "        \n",
     "        self.convs = nn.ModuleList([\n",
@@ -374,8 +372,7 @@
     "DROPOUT = 0.5\n",
     "PAD_IDX = TEXT.vocab.stoi[TEXT.pad_token]\n",
     "\n",
-    "\n",
-    "model = CNN1d(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT, PAD_IDX)"
+    "model = CNN(INPUT_DIM, EMBEDDING_DIM, N_FILTERS, FILTER_SIZES, OUTPUT_DIM, DROPOUT, PAD_IDX)"
    ]
   },
   {
@@ -636,21 +633,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.656 | Train Acc: 60.82%\n",
-      "\t Val. Loss: 0.521 |  Val. Acc: 77.40%\n",
-      "Epoch: 02 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.432 | Train Acc: 80.00%\n",
-      "\t Val. Loss: 0.369 |  Val. Acc: 84.44%\n",
-      "Epoch: 03 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.307 | Train Acc: 86.99%\n",
-      "\t Val. Loss: 0.344 |  Val. Acc: 85.22%\n",
-      "Epoch: 04 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.224 | Train Acc: 91.09%\n",
-      "\t Val. Loss: 0.321 |  Val. Acc: 86.77%\n",
-      "Epoch: 05 | Epoch Time: 0m 7s\n",
-      "\tTrain Loss: 0.157 | Train Acc: 94.17%\n",
-      "\t Val. Loss: 0.331 |  Val. Acc: 87.02%\n"
+      "Epoch: 01 | Epoch Time: 0m 11s\n",
+      "\tTrain Loss: 0.644 | Train Acc: 62.23%\n",
+      "\t Val. Loss: 0.487 |  Val. Acc: 78.46%\n",
+      "Epoch: 02 | Epoch Time: 0m 11s\n",
+      "\tTrain Loss: 0.419 | Train Acc: 80.98%\n",
+      "\t Val. Loss: 0.360 |  Val. Acc: 84.72%\n",
+      "Epoch: 03 | Epoch Time: 0m 11s\n",
+      "\tTrain Loss: 0.302 | Train Acc: 87.17%\n",
+      "\t Val. Loss: 0.345 |  Val. Acc: 85.25%\n",
+      "Epoch: 04 | Epoch Time: 0m 11s\n",
+      "\tTrain Loss: 0.218 | Train Acc: 91.27%\n",
+      "\t Val. Loss: 0.318 |  Val. Acc: 87.04%\n",
+      "Epoch: 05 | Epoch Time: 0m 11s\n",
+      "\tTrain Loss: 0.155 | Train Acc: 94.35%\n",
+      "\t Val. Loss: 0.339 |  Val. Acc: 86.56%\n"
      ]
     }
    ],
@@ -695,7 +692,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.345 | Test Acc: 85.06%\n"
+      "Test Loss: 0.339 | Test Acc: 85.28%\n"
      ]
     }
    ],
@@ -754,7 +751,7 @@
     {
      "data": {
       "text/plain": [
-       "0.15394726395606995"
+       "0.1023554727435112"
       ]
      },
      "execution_count": 19,
@@ -781,7 +778,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9749677777290344"
+       "0.9818674325942993"
       ]
      },
      "execution_count": 20,
