removed unnecessary squeeze in rnn forward method

--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -266,7 +266,7 @@
     "                \n",
     "        #hidden = [batch size, hid dim * num directions]\n",
     "            \n",
-    "        return self.fc(hidden.squeeze(0))"
+    "        return self.fc(hidden)"
    ]
   },
   {
@@ -638,21 +638,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 28s\n",
-      "\tTrain Loss: 0.641 | Train Acc: 62.54%\n",
-      "\t Val. Loss: 0.520 |  Val. Acc: 74.92%\n",
-      "Epoch: 02 | Epoch Time: 0m 28s\n",
-      "\tTrain Loss: 0.559 | Train Acc: 71.77%\n",
-      "\t Val. Loss: 0.735 |  Val. Acc: 62.60%\n",
+      "Epoch: 01 | Epoch Time: 0m 27s\n",
+      "\tTrain Loss: 0.639 | Train Acc: 62.83%\n",
+      "\t Val. Loss: 0.524 |  Val. Acc: 74.70%\n",
+      "Epoch: 02 | Epoch Time: 0m 26s\n",
+      "\tTrain Loss: 0.572 | Train Acc: 70.90%\n",
+      "\t Val. Loss: 0.509 |  Val. Acc: 73.56%\n",
       "Epoch: 03 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.479 | Train Acc: 78.00%\n",
-      "\t Val. Loss: 0.403 |  Val. Acc: 82.23%\n",
-      "Epoch: 04 | Epoch Time: 0m 28s\n",
-      "\tTrain Loss: 0.381 | Train Acc: 83.92%\n",
-      "\t Val. Loss: 0.343 |  Val. Acc: 85.85%\n",
+      "\tTrain Loss: 0.458 | Train Acc: 79.05%\n",
+      "\t Val. Loss: 0.423 |  Val. Acc: 81.61%\n",
+      "Epoch: 04 | Epoch Time: 0m 27s\n",
+      "\tTrain Loss: 0.417 | Train Acc: 81.11%\n",
+      "\t Val. Loss: 0.398 |  Val. Acc: 84.47%\n",
       "Epoch: 05 | Epoch Time: 0m 27s\n",
-      "\tTrain Loss: 0.319 | Train Acc: 86.83%\n",
-      "\t Val. Loss: 0.360 |  Val. Acc: 85.59%\n"
+      "\tTrain Loss: 0.329 | Train Acc: 86.37%\n",
+      "\t Val. Loss: 0.341 |  Val. Acc: 85.72%\n"
      ]
     }
    ],
@@ -697,7 +697,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.342 | Test Acc: 86.02%\n"
+      "Test Loss: 0.335 | Test Acc: 85.75%\n"
      ]
     }
    ],
@@ -769,7 +769,7 @@
     {
      "data": {
       "text/plain": [
-       "0.019431069493293762"
+       "0.008249394595623016"
       ]
      },
      "execution_count": 21,
@@ -796,7 +796,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9544845819473267"
+       "0.9466221928596497"
       ]
      },
      "execution_count": 22,
