reran all notebooks with latest pytorch and torchtext to ensure still working

--- a/1 - Simple Sentiment Analysis.ipynb
+++ b/1 - Simple Sentiment Analysis.ipynb
@@ -311,7 +311,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<function _default_unk_index at 0x7f91ba0f8d08>, {'neg': 0, 'pos': 1})\n"
+      "defaultdict(<function _default_unk_index at 0x7ff0c24dbf28>, {'neg': 0, 'pos': 1})\n"
      ]
     }
    ],
@@ -709,19 +709,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 18s\n",
+      "Epoch: 01 | Epoch Time: 0m 17s\n",
       "\tTrain Loss: 0.694 | Train Acc: 50.12%\n",
       "\t Val. Loss: 0.696 |  Val. Acc: 50.17%\n",
-      "Epoch: 02 | Epoch Time: 0m 19s\n",
-      "\tTrain Loss: 0.693 | Train Acc: 49.73%\n",
+      "Epoch: 02 | Epoch Time: 0m 16s\n",
+      "\tTrain Loss: 0.693 | Train Acc: 49.72%\n",
       "\t Val. Loss: 0.696 |  Val. Acc: 51.01%\n",
-      "Epoch: 03 | Epoch Time: 0m 17s\n",
+      "Epoch: 03 | Epoch Time: 0m 16s\n",
       "\tTrain Loss: 0.693 | Train Acc: 50.22%\n",
       "\t Val. Loss: 0.696 |  Val. Acc: 50.87%\n",
-      "Epoch: 04 | Epoch Time: 0m 18s\n",
+      "Epoch: 04 | Epoch Time: 0m 16s\n",
       "\tTrain Loss: 0.693 | Train Acc: 49.94%\n",
       "\t Val. Loss: 0.696 |  Val. Acc: 49.91%\n",
-      "Epoch: 05 | Epoch Time: 0m 18s\n",
+      "Epoch: 05 | Epoch Time: 0m 17s\n",
       "\tTrain Loss: 0.693 | Train Acc: 50.07%\n",
       "\t Val. Loss: 0.696 |  Val. Acc: 51.00%\n"
      ]
