added explicit notes to copy embeddings using weight.data and not weight

--- a/2 - Upgraded Sentiment Analysis.ipynb
+++ b/2 - Upgraded Sentiment Analysis.ipynb
@@ -366,7 +366,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then replace the initial weights of the `embedding` layer with the pre-trained embeddings."
+    "We then replace the initial weights of the `embedding` layer with the pre-trained embeddings.\n",
+    "\n",
+    "**Note**: this should always be done on the `weight.data` and not the `weight`!"
    ]
   },
   {
@@ -401,7 +403,9 @@
    "source": [
     "As our `<unk>` and `<pad>` token aren't in the pre-trained vocabulary they have been initialized using `unk_init` (an $\\mathcal{N}(0,1)$ distribution) when building our vocab. It is preferable to initialize them both to all zeros to explicitly tell our model that, initially, they are irrelevant for determining sentiment. \n",
     "\n",
-    "We do this by manually setting their row in the embedding weights matrix to zeros. We get their row by finding the index of the tokens, which we have already done for the padding index."
+    "We do this by manually setting their row in the embedding weights matrix to zeros. We get their row by finding the index of the tokens, which we have already done for the padding index.\n",
+    "\n",
+    "**Note**: like initializing the embeddings, this should be done on the `weight.data` and not the `weight`!"
    ]
   },
   {
