fixed appendix C loading incorrect embeddings from cache

--- a/C - Loading, Saving and Freezing Embeddings.ipynb
+++ b/C - Loading, Saving and Freezing Embeddings.ipynb
@@ -94,14 +94,22 @@
    "source": [
     "We can only load our custom embeddings after they have been turned into a `Vectors` object.\n",
     "\n",
-    "We create a `Vector` object by passing it the location of the embeddings (`name`), a location for the cached embeddings (`cache`) and a function to initialize tokens in our dataset that aren't within our embeddings (`unk_init`). As have done in previous notebooks, we have initialized these to $\\mathcal{N}(0,1)$."
+    "We create a `Vector` object by passing it the location of the embeddings (`name`), a location for the cached embeddings (`cache`) and a function that will later initialize tokens in our embeddings that aren't within our dataset (`unk_init`). As have done in previous notebooks, we have initialized these to $\\mathcal{N}(0,1)$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/7 [00:00<?, ?it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import torchtext.vocab as vocab\n",
     "\n",
@@ -322,7 +330,6 @@
     "class CNN(nn.Module):\n",
     "    def __init__(self, vocab_size, embedding_dim, n_filters, filter_sizes, output_dim, \n",
     "                 dropout, pad_idx):\n",
-    "        \n",
     "        super().__init__()\n",
     "        \n",
     "        self.embedding = nn.Embedding(vocab_size, embedding_dim, padding_idx = pad_idx)\n",
@@ -576,12 +583,12 @@
     "        acc = binary_accuracy(predictions, batch.label)\n",
     "        \n",
     "        loss.backward()\n",
-    "        \n",
+    "            \n",
     "        optimizer.step()\n",
     "        \n",
     "        epoch_loss += loss.item()\n",
     "        epoch_acc += acc.item()\n",
-    "        \n",
+    "                \n",
     "    return epoch_loss / len(iterator), epoch_acc / len(iterator)"
    ]
   },
@@ -669,36 +676,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 6s | Frozen? True\n",
-      "\tTrain Loss: 0.729 | Train Acc: 52.97%\n",
-      "\t Val. Loss: 0.664 |  Val. Acc: 57.37%\n",
+      "Epoch: 01 | Epoch Time: 0m 7s | Frozen? True\n",
+      "\tTrain Loss: 0.724 | Train Acc: 53.68%\n",
+      "\t Val. Loss: 0.658 |  Val. Acc: 62.27%\n",
       "Epoch: 02 | Epoch Time: 0m 6s | Frozen? True\n",
-      "\tTrain Loss: 0.668 | Train Acc: 59.44%\n",
-      "\t Val. Loss: 0.628 |  Val. Acc: 67.04%\n",
+      "\tTrain Loss: 0.670 | Train Acc: 59.36%\n",
+      "\t Val. Loss: 0.626 |  Val. Acc: 67.51%\n",
       "Epoch: 03 | Epoch Time: 0m 6s | Frozen? True\n",
-      "\tTrain Loss: 0.641 | Train Acc: 62.82%\n",
-      "\t Val. Loss: 0.601 |  Val. Acc: 68.86%\n",
+      "\tTrain Loss: 0.636 | Train Acc: 63.62%\n",
+      "\t Val. Loss: 0.592 |  Val. Acc: 70.22%\n",
       "Epoch: 04 | Epoch Time: 0m 6s | Frozen? True\n",
-      "\tTrain Loss: 0.614 | Train Acc: 66.12%\n",
-      "\t Val. Loss: 0.569 |  Val. Acc: 72.47%\n",
+      "\tTrain Loss: 0.613 | Train Acc: 66.22%\n",
+      "\t Val. Loss: 0.573 |  Val. Acc: 71.77%\n",
       "Epoch: 05 | Epoch Time: 0m 6s | Frozen? True\n",
-      "\tTrain Loss: 0.598 | Train Acc: 67.31%\n",
-      "\t Val. Loss: 0.566 |  Val. Acc: 71.31%\n",
+      "\tTrain Loss: 0.599 | Train Acc: 67.40%\n",
+      "\t Val. Loss: 0.569 |  Val. Acc: 70.86%\n",
       "Epoch: 06 | Epoch Time: 0m 7s | Frozen? False\n",
-      "\tTrain Loss: 0.573 | Train Acc: 69.43%\n",
-      "\t Val. Loss: 0.513 |  Val. Acc: 76.31%\n",
+      "\tTrain Loss: 0.577 | Train Acc: 69.53%\n",
+      "\t Val. Loss: 0.520 |  Val. Acc: 76.17%\n",
       "Epoch: 07 | Epoch Time: 0m 7s | Frozen? False\n",
-      "\tTrain Loss: 0.541 | Train Acc: 72.58%\n",
-      "\t Val. Loss: 0.485 |  Val. Acc: 78.01%\n",
+      "\tTrain Loss: 0.544 | Train Acc: 72.21%\n",
+      "\t Val. Loss: 0.487 |  Val. Acc: 78.03%\n",
       "Epoch: 08 | Epoch Time: 0m 7s | Frozen? False\n",
-      "\tTrain Loss: 0.512 | Train Acc: 75.09%\n",
-      "\t Val. Loss: 0.452 |  Val. Acc: 79.49%\n",
+      "\tTrain Loss: 0.507 | Train Acc: 74.96%\n",
+      "\t Val. Loss: 0.450 |  Val. Acc: 80.02%\n",
       "Epoch: 09 | Epoch Time: 0m 7s | Frozen? False\n",
-      "\tTrain Loss: 0.471 | Train Acc: 77.42%\n",
-      "\t Val. Loss: 0.418 |  Val. Acc: 81.55%\n",
+      "\tTrain Loss: 0.469 | Train Acc: 77.72%\n",
+      "\t Val. Loss: 0.420 |  Val. Acc: 81.79%\n",
       "Epoch: 10 | Epoch Time: 0m 7s | Frozen? False\n",
-      "\tTrain Loss: 0.430 | Train Acc: 80.11%\n",
-      "\t Val. Loss: 0.390 |  Val. Acc: 82.75%\n"
+      "\tTrain Loss: 0.426 | Train Acc: 80.28%\n",
+      "\t Val. Loss: 0.392 |  Val. Acc: 82.76%\n"
      ]
     }
    ],
@@ -760,7 +767,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.391 | Test Acc: 82.76%\n"
+      "Test Loss: 0.396 | Test Acc: 82.36%\n"
      ]
     }
    ],
@@ -819,7 +826,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 25002/25002 [00:00<00:00, 35258.49it/s]\n"
+      "100%|██████████| 25002/25002 [00:00<00:00, 38085.03it/s]\n"
      ]
     }
    ],
@@ -840,7 +847,15 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|███████   | 17550/24946 [00:00<00:00, 87559.48it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "trained_embeddings = vocab.Vectors(name = 'custom_embeddings/trained_embeddings.txt',\n",
     "                                   cache = 'custom_embeddings',\n",
@@ -863,21 +878,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1781, -0.1351,  0.3118, -0.0431,  0.0838, -0.1283, -0.3501, -0.0963,\n",
-      "         -0.0776,  0.2584,  0.1862, -0.1307,  0.1398, -0.1115, -0.1089, -0.0303,\n",
-      "         -0.2470,  0.0454, -0.0914, -0.0321],\n",
+      "tensor([[-0.2573, -0.2088,  0.2413, -0.1549,  0.1940, -0.1466, -0.2195, -0.1011,\n",
+      "         -0.1327,  0.1803,  0.2369, -0.2182,  0.1543, -0.2150, -0.0699, -0.0430,\n",
+      "         -0.1958, -0.0506, -0.0059, -0.0024],\n",
       "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
       "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
       "          0.0000,  0.0000,  0.0000,  0.0000],\n",
-      "        [-0.3360, -0.4653,  0.7737, -0.4801, -0.2842,  0.0076, -1.6847, -0.2146,\n",
-      "          0.5205,  1.5765, -0.2281, -0.3088, -0.4192, -0.6686,  0.5931,  0.5176,\n",
-      "         -0.8591,  0.0511, -1.4832,  1.1515],\n",
-      "        [-0.5345, -0.0592,  0.0321, -0.7182, -0.2356, -0.4067, -1.6396,  0.9629,\n",
-      "          1.0316,  0.3874, -0.1957, -1.4063, -1.9366,  0.6403, -0.5497, -0.5975,\n",
-      "          0.4083, -0.3779,  0.8068,  1.0360],\n",
-      "        [-0.6012,  0.0445,  0.4258, -1.6681,  0.1686,  0.2056, -0.0124,  0.7813,\n",
-      "         -0.0130,  0.4047,  0.3978, -0.5975, -0.0997, -0.1973, -0.7313, -0.0873,\n",
-      "          1.4011,  1.5026,  0.7237,  0.1266]])\n"
+      "        [-0.1427, -0.4414,  0.7181, -0.5751, -0.3183,  0.0552, -1.6764, -0.3177,\n",
+      "          0.6592,  1.6143, -0.1920, -0.1881, -0.4321, -0.8578,  0.5266,  0.5243,\n",
+      "         -0.7083, -0.0048, -1.4680,  1.1425],\n",
+      "        [-0.4700, -0.0363,  0.0560, -0.7394, -0.2412, -0.4197, -1.7096,  0.9444,\n",
+      "          0.9633,  0.3703, -0.2243, -1.5279, -1.9086,  0.5718, -0.5721, -0.6015,\n",
+      "          0.3579, -0.3834,  0.8079,  1.0553],\n",
+      "        [-0.7055,  0.0954,  0.4646, -1.6595,  0.1138,  0.2208, -0.0220,  0.7397,\n",
+      "         -0.1153,  0.3586,  0.3040, -0.6414, -0.1579, -0.2738, -0.6942,  0.0083,\n",
+      "          1.4097,  1.5225,  0.6409,  0.0076]])\n"
      ]
     }
    ],
@@ -894,21 +909,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[-0.1512, -0.1100,  0.3015, -0.0599,  0.0781, -0.0837, -0.3475, -0.0578,\n",
-      "         -0.0927,  0.2578,  0.1762, -0.1531,  0.1481, -0.1540, -0.1185, -0.0258,\n",
-      "         -0.2537,  0.0661, -0.0537, -0.0459],\n",
-      "        [ 0.0869, -0.0301, -0.1108, -0.0691,  0.0959, -0.0994,  0.0355,  0.0212,\n",
-      "          0.0139, -0.1548, -0.0629,  0.0922, -0.0887,  0.0610,  0.0750, -0.0023,\n",
-      "          0.0743, -0.0661,  0.0251, -0.0088],\n",
-      "        [-0.3126, -0.4860,  0.7819, -0.4965, -0.2289,  0.0193, -1.7136, -0.2282,\n",
-      "          0.5028,  1.5822, -0.2360, -0.3074, -0.4198, -0.6975,  0.6068,  0.5152,\n",
-      "         -0.8779,  0.0279, -1.4796,  1.1468],\n",
-      "        [-0.5136, -0.0951,  0.0428, -0.7281, -0.2615, -0.3932, -1.6468,  0.9937,\n",
-      "          1.0230,  0.3388, -0.1938, -1.4431, -1.9385,  0.6605, -0.5277, -0.5678,\n",
-      "          0.4215, -0.4132,  0.7857,  1.0323],\n",
-      "        [-0.6408,  0.0279,  0.3871, -1.6507,  0.1783,  0.2122, -0.0295,  0.7995,\n",
-      "         -0.0181,  0.3661,  0.3441, -0.5665, -0.0782, -0.2150, -0.7350, -0.0793,\n",
-      "          1.4205,  1.5412,  0.7390,  0.1311]], device='cuda:0')\n"
+      "tensor([[-0.2573, -0.2088,  0.2413, -0.1549,  0.1940, -0.1466, -0.2195, -0.1011,\n",
+      "         -0.1327,  0.1803,  0.2369, -0.2182,  0.1543, -0.2150, -0.0699, -0.0430,\n",
+      "         -0.1958, -0.0506, -0.0059, -0.0024],\n",
+      "        [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+      "          0.0000,  0.0000,  0.0000,  0.0000],\n",
+      "        [-0.1427, -0.4414,  0.7181, -0.5751, -0.3183,  0.0552, -1.6764, -0.3177,\n",
+      "          0.6592,  1.6143, -0.1920, -0.1881, -0.4321, -0.8578,  0.5266,  0.5243,\n",
+      "         -0.7083, -0.0048, -1.4680,  1.1425],\n",
+      "        [-0.4700, -0.0363,  0.0560, -0.7394, -0.2412, -0.4197, -1.7096,  0.9444,\n",
+      "          0.9633,  0.3703, -0.2243, -1.5279, -1.9086,  0.5718, -0.5721, -0.6015,\n",
+      "          0.3579, -0.3834,  0.8079,  1.0553],\n",
+      "        [-0.7055,  0.0954,  0.4646, -1.6595,  0.1138,  0.2208, -0.0220,  0.7397,\n",
+      "         -0.1153,  0.3586,  0.3040, -0.6414, -0.1579, -0.2738, -0.6942,  0.0083,\n",
+      "          1.4097,  1.5225,  0.6409,  0.0076]], device='cuda:0')\n"
      ]
     }
    ],
@@ -940,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
