added batch_first to remove a permute

--- a/4 - Convolutional Sentiment Analysis.ipynb
+++ b/4 - Convolutional Sentiment Analysis.ipynb
@@ -27,7 +27,9 @@
     "\n",
     "As in the previous notebooks, we'll prepare the data. \n",
     "\n",
-    "Unlike the previous notebook with the FastText model, we no longer explicitly need to create the bi-grams and append them to the end of the sentence."
+    "Unlike the previous notebook with the FastText model, we no longer explicitly need to create the bi-grams and append them to the end of the sentence.\n",
+    "\n",
+    "As convolutional layers expect the batch dimension to be first we can tell TorchText to return the data already permuted using the `batch_first = True` argument on the field."
    ]
   },
   {
@@ -40,13 +42,16 @@
     "from torchtext import data\n",
     "from torchtext import datasets\n",
     "import random\n",
+    "import numpy as np\n",
     "\n",
     "SEED = 1234\n",
     "\n",
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "TEXT = data.Field(tokenize = 'spacy')\n",
+    "TEXT = data.Field(tokenize = 'spacy', batch_first = True)\n",
     "LABEL = data.LabelField(dtype = torch.float)\n",
     "\n",
     "train_data, test_data = datasets.IMDB.splits(TEXT, LABEL)\n",
@@ -142,7 +147,7 @@
     "\n",
     "We implement the convolutional layers with `nn.Conv2d`. The `in_channels` argument is the number of \"channels\" in your image going into the convolutional layer. In actual images this is usually 3 (one channel for each of the red, blue and green channels), however when using text we only have a single channel, the text itself. The `out_channels` is the number of filters and the `kernel_size` is the size of the filters. Each of our `kernel_size`s is going to be **[n x emb_dim]** where $n$ is the size of the n-grams.\n",
     "\n",
-    "In PyTorch, RNNs want the input with the batch dimension second, whereas CNNs want the batch dimension first. Thus, the first thing we do to our input is `permute` it to make it the correct shape. We then pass the sentence through an embedding layer to get our embeddings. The second dimension of the input into a `nn.Conv2d` layer must be the channel dimension. As text technically does not have a channel dimension, we `unsqueeze` our tensor to create one. This matches with our `in_channels=1` in the initialization of our convolutional layers. \n",
+    "In PyTorch, RNNs want the input with the batch dimension second, whereas CNNs want the batch dimension first - we do not have to permute the data here as we have already set `batch_first = True` in our `TEXT` field. We then pass the sentence through an embedding layer to get our embeddings. The second dimension of the input into a `nn.Conv2d` layer must be the channel dimension. As text technically does not have a channel dimension, we `unsqueeze` our tensor to create one. This matches with our `in_channels=1` in the initialization of our convolutional layers. \n",
     "\n",
     "We then pass the tensors through the convolutional and pooling layers, using the `ReLU` activation function after the convolutional layers. Another nice feature of the pooling layers is that they handle sentences of different lengths. The size of the output of the convolutional layer is dependent on the size of the input to it, and different batches contain sentences of different lengths. Without the max pooling layer the input to our linear layer would depend on the size of the input sentence (not what we want). One option to rectify this would be to trim/pad all sentences to the same length, however with the max pooling layer we always know the input to the linear layer will be the total number of filters. **Note**: there an exception to this if your sentence(s) are shorter than the largest filter used. You will then have to pad your sentences to the length of the largest filter. In the IMDb data there are no reviews only 5 words long so we don't have to worry about that, but you will if you are using your own data.\n",
     "\n",
@@ -183,10 +188,6 @@
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, text):\n",
-    "        \n",
-    "        #text = [sent len, batch size]\n",
-    "        \n",
-    "        text = text.permute(1, 0)\n",
     "                \n",
     "        #text = [batch size, sent len]\n",
     "        \n",
@@ -254,10 +255,6 @@
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, text):\n",
-    "        \n",
-    "        #text = [sent len, batch size]\n",
-    "        \n",
-    "        text = text.permute(1, 0)\n",
     "                \n",
     "        #text = [batch size, sent len]\n",
     "        \n",
@@ -319,10 +316,6 @@
     "        self.dropout = nn.Dropout(dropout)\n",
     "        \n",
     "    def forward(self, text):\n",
-    "        \n",
-    "        #text = [sent len, batch size]\n",
-    "        \n",
-    "        text = text.permute(1, 0)\n",
     "        \n",
     "        #text = [batch size, sent len]\n",
     "        \n",
@@ -633,21 +626,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 01 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.645 | Train Acc: 62.24%\n",
-      "\t Val. Loss: 0.488 |  Val. Acc: 78.77%\n",
+      "Epoch: 01 | Epoch Time: 0m 13s\n",
+      "\tTrain Loss: 0.645 | Train Acc: 62.08%\n",
+      "\t Val. Loss: 0.488 |  Val. Acc: 78.64%\n",
       "Epoch: 02 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.418 | Train Acc: 81.11%\n",
-      "\t Val. Loss: 0.361 |  Val. Acc: 84.43%\n",
+      "\tTrain Loss: 0.418 | Train Acc: 81.14%\n",
+      "\t Val. Loss: 0.361 |  Val. Acc: 84.59%\n",
       "Epoch: 03 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.300 | Train Acc: 87.32%\n",
-      "\t Val. Loss: 0.348 |  Val. Acc: 84.94%\n",
+      "\tTrain Loss: 0.300 | Train Acc: 87.33%\n",
+      "\t Val. Loss: 0.348 |  Val. Acc: 85.06%\n",
       "Epoch: 04 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.219 | Train Acc: 91.34%\n",
-      "\t Val. Loss: 0.320 |  Val. Acc: 86.68%\n",
+      "\tTrain Loss: 0.217 | Train Acc: 91.49%\n",
+      "\t Val. Loss: 0.320 |  Val. Acc: 86.71%\n",
       "Epoch: 05 | Epoch Time: 0m 11s\n",
-      "\tTrain Loss: 0.155 | Train Acc: 94.45%\n",
-      "\t Val. Loss: 0.332 |  Val. Acc: 86.89%\n"
+      "\tTrain Loss: 0.156 | Train Acc: 94.22%\n",
+      "\t Val. Loss: 0.334 |  Val. Acc: 87.06%\n"
      ]
     }
    ],
@@ -692,7 +685,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Loss: 0.339 | Test Acc: 85.38%\n"
+      "Test Loss: 0.339 | Test Acc: 85.39%\n"
      ]
     }
    ],
@@ -717,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +724,7 @@
     "        tokenized += ['<pad>'] * (min_len - len(tokenized))\n",
     "    indexed = [TEXT.vocab.stoi[t] for t in tokenized]\n",
     "    tensor = torch.LongTensor(indexed).to(device)\n",
-    "    tensor = tensor.unsqueeze(1)\n",
+    "    tensor = tensor.unsqueeze(0)\n",
     "    prediction = torch.sigmoid(model(tensor))\n",
     "    return prediction.item()"
    ]
@@ -745,16 +738,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09914720058441162"
+       "0.11022213101387024"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,16 +765,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.979477047920227"
+       "0.9785954356193542"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
