(#63) fixed typo in transformer model

--- a/6 - Transformers for Sentiment Analysis.ipynb
+++ b/6 - Transformers for Sentiment Analysis.ipynb
@@ -559,7 +559,7 @@
     "        #text = [batch size, sent len]\n",
     "                \n",
     "        with torch.no_grad():\n",
-    "            embedded = bert(text)[0]\n",
+    "            embedded = self.bert(text)[0]\n",
     "                \n",
     "        #embedded = [batch size, sent len, emb dim]\n",
     "        \n",
@@ -1041,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
