clarified loading own datasets

--- a/A - Using TorchText with Your Own Datasets.ipynb
+++ b/A - Using TorchText with Your Own Datasets.ipynb
@@ -73,7 +73,7 @@
     "  - the first element becomes the batch object's attribute name\n",
     "  - the second element is the name of the `Field`\n",
     "  \n",
-    "What do we mean when we say \"becomes the batch object's attribute name\"? Recall in the previous exercises where we accessed the `TEXT` and `LABEL` fields in the train/evaluation loop by using `batch.text` and `batch.label`. Here, to access the name we use `batch.n`, to access the location we use `batch.p`, etc.\n",
+    "What do we mean when we say \"becomes the batch object's attribute name\"? Recall in the previous exercises where we accessed the `TEXT` and `LABEL` fields in the train/evaluation loop by using `batch.text` and `batch.label`, this is because TorchText sets the batch object to have a `text` and `label` attribute, each being a tensor containing either the text or the label.\n",
     "\n",
     "A few notes:\n",
     "\n",
@@ -103,6 +103,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now, in a training loop we can iterate over the data iterator and access the name via `batch.n`, the location via `batch.p`, and the quote via `batch.s`.\n",
+    "\n",
     "We then create our datasets (`train_data` and `test_data`) with the `TabularDataset.splits` function. \n",
     "\n",
     "The `path` argument specifices the top level folder common among both datasets, and the `train` and `test` arguments specify the filename of each dataset, e.g. here the train dataset is located at `data/train.json`.\n",
@@ -442,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
